# pcci-attestation-stack

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md  TODO  toolchain-x86_64-linux-gnu.cmake
.cargo/: config.toml
.devcontainer/: Dockerfile  devcontainer.json
.github/: pull_request_template.md
.github/actions/build-env/: action.yml
.github/assets/: colors.md
.github/workflows/: wasm.yaml
.zed/: settings.json
attestation-server/: Cargo.toml  Dockerfile
attestation-server/src/: main.rs  nonce.rs  nvidia_api.rs  response.rs  sev_api.rs  tdx_api.rs
examples/bare/: package.json
examples/bun/: index.ts
examples/vite/: .npmrc.example  package.json  vite.config.js
examples/vite/src/: main.ts
libattest/: Cargo.toml
libattest/src/: error.rs  lib.rs  modules.rs  validation.rs  verification_new.rs
libattest/src/error/: root.rs
nvidia-attest/: Cargo.toml  README.md
nvidia-attest/src/: attestation.rs  error.rs  keychain.rs  lib.rs  nonce.rs  types.rs  verifiers.rs
nvidia-attest/tests/: eat_example.json  verification.rs
prem-rs/: Cargo.toml
prem-rs/examples/: bun.ts  endtoend.rs  sev.rs
prem-rs/src/: error.rs  gateway.rs  lib.rs  rego.rs
prem-rs/tests/: policies.rs
reticle/: Cargo.toml
reticle/examples/: bun.ts  endtoend.rs  fetch.ts
reticle/src/: fetch.rs  fetchShim.js  gateway.rs  lib.rs  query.rs
snp-attest/: .gitignore  Cargo.toml  Makefile  readme.md
snp-attest/examples/: read-report.rs
snp-attest/src/: claims.rs  compatibility.rs  json.rs  kds.rs  kds_util.rs  lib.rs  nonce.rs  oid.rs
snp-attest/src/attestation/: chain.rs  error.rs  kds.rs  mod.rs
snp-attest/src/hyperv/: mod.rs  thim.rs  vtpm.rs
snp-attest/src/wasm/: chain.rs  error.rs  kds.rs  mod.rs  nonce.rs
tdx-attest/: Cargo.toml
tdx-attest/examples/: parse.rs  quote.test
tdx-attest/src/: certificates.rs  dcap.rs  error.rs  keychain.rs  lib.rs  nonce.rs  pcs.rs  quote.rs  verify.rs
tdx-attest/src/certificates/: ca.rs  crl.rs  error.rs  extensions.rs
tdx-attest/src/certificates/test/: ca_cert.pem  ca_crl.pem  revoked_cert.pem
tdx-attest/src/dcap/: parser.rs  types.rs
tdx-attest/src/pcs/: qe.rs  signed_response.rs  tcb.rs
