[package]
name = "attestation-server"
version = "0.1.0"
edition = "2024"

[features]
sev = ["dep:sev"]
nvidia = ["dep:nvat"]
tdx = ["dep:configfs-tsm"]
default = ["nvidia", "tdx"]

[dependencies]
serde = "1.0.228"
serde_json = "1.0.145"
tokio = { version = "1.48.0", features = ["full"] }
sev = { version = "7.1.0", default-features = false, features = ["crypto_nossl", "snp"], optional = true }
rocket = { version = "0.5.1", features = ["json"] }
anyhow = "1.0.100"
base64 = "0.22.1"
hex = "0.4.3"
thiserror = "2"
nvat = { git = "ssh://git@github.com/premAI-io/nvat-rs.git", branch = "main", optional = true }
libattest = { path = "../libattest" }

snp-attest = { path = "../snp-attest", default-features = false }
env_logger = "0.11.8"
log = "0.4.29"
configfs-tsm = { version = "0.0.2", optional = true }
