[package]
name = "libattest"
version = "0.1.0"
edition = "2024"

[dependencies]
getrandom = "0.4.1"
hex = "0.4.3"
serde = { version = "1.0.228", features = ["derive"] }

[target.'cfg(target_family = "wasm")'.dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
getrandom = { version = "0.4.1", features = ["wasm_js"] }
