[package]
name = "nvidia-attest"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
hex = { version = "0.4", features = ["serde"] }
getrandom = { version = "=0.2.16", features = ["js"] }
jsonwebtoken = { version = "10.2", features = ["rust_crypto"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
thiserror = "2.0"
libattest = { path = "../libattest" }

[target.'cfg(target_family = "wasm")'.dependencies]
wasm-bindgen.workspace = true
wasm-bindgen-futures.workspace = true


[dev-dependencies]
tokio = { version = "*", features = ["full"] }
