[package]
name = "nvidia-attest"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
hex = { version = "0.4.3", features = ["serde"] }
getrandom = { version = "=0.2.16", features = ["js"] }
jsonwebtoken = { version = "10.2.0", features = ["rust_crypto"] }
reqwest = { version = "0.12.24", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sha2 = "0.10.9"
thiserror = "2.0.17"
libattest = { path = "../libattest" }

[target.'cfg(target_family = "wasm")'.dependencies]
wasm-bindgen.workspace = true
wasm-bindgen-futures.workspace = true


[dev-dependencies]
tokio = { version = "*", features = ["full"] }
