[package]
name = "prem-rs"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
bytes = "1.11.0"
nvidia-attest = { path = "../nvidia-attest" }
reqwest = "0.12.25"
snp-attest = { path = "../snp-attest", features = ["kds_async"] }
thiserror = "2.0.17"
wasm-bindgen = "0.2.106"
wasm-bindgen-futures = "0.4.56"

[dev-dependencies]
tokio = {version = "*", features = ["full"]}

[package.metadata.wasm-pack.profile.release.wasm-bindgen]
split-linked-modules = true
