[package]
name = "prem-rs"
version = "0.3.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
bytes = "1.11.0"
nvidia-attest = { path = "../nvidia-attest" }
reqwest = "0.12.25"
snp-attest = { path = "../snp-attest" }
tdx-attest = { path = "../tdx-attest" }
thiserror = "2.0.17"
wasm-bindgen = "0.2.106"
wasm-bindgen-futures = "0.4.56"
console_error_panic_hook = "0.1"
libattest = { path = "../libattest" }
serde = { version = "1.0.228", features = ["derive"] }
hex = "0.4.3"
futures = "0.3.32"

[dev-dependencies]
tokio = {version = "*", features = ["full"]}

[features]
debug = []

[package.metadata.wasm-pack.profile.release.wasm-bindgen]
split-linked-modules = true
