[package]
name = "snp-attest"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "attest-report"
required-features = ["kds_sync", "bin"]

[[bin]]
name = "create-report"
required-features = ["kds_sync", "bin"]

[[bin]]
name = "vtpm-attestation-key"
required-features = ["hyperv", "kds_sync", "bin"]

[[bin]]
name = "vtpm-pcrs"
required-features = ["hyperv", "kds_sync", "bin"]

[dependencies]
sev = { version = "7.1.1", default-features = false, features = ["crypto_nossl", "snp"] }
tss-esapi = { version= "7.2", optional=true }
anyhow = "1.0.69"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# openssl = { version = "0.10.73" }
x509-parser = { version="0.18.0", features=["verify"] }
hex = {version = "0.4.3"}
reqwest = { optional = true, version = "0.12", features = ["json", "blocking"] }
thiserror = "2"
p384 = "0.13.1"
rsa = "0.9.8"
sha2 = "0.10.9"
x509-cert = { version = "0.2.5", features = ["signature"] }
der = { version = "0.7.10", features = ["pem"] }
signature = { version = "2.2.0", features = ["std"] }
clap = { version = "4.5.53", optional = true, features = ["derive"] }
log = "0.4.28"

[dependencies.getrandom]
version = "=0.2.16"
features = ["js"]

[target.'cfg(target_family = "wasm")'.dependencies]
wasm-bindgen = "0.2.105"
wasm-bindgen-futures = "0.4.55"
wasm-log = { version = "0.3.1", optional = true }

[features]
default = ["attestation"]
logger = ["dep:wasm-log"]
hyperv = ["dep:tss-esapi"]
kds = ["dep:reqwest"]
attestation = []
kds_sync = ["kds"]
kds_async = ["kds"]
bin = ["dep:clap"]
