[package]
name = "snp-attest"
version = "0.1.0"
edition = "2024"


[dependencies]
sev = { version = "7.1.0", default-features = false, features = ["crypto_nossl", "snp"] }
libattest = { path = "../libattest" }
tss-esapi = { version= "7.2", optional=true }
# anyhow = "1.0.69"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# openssl = { version = "0.10.73" }
x509-parser = { version="0.18.0", features=["verify"] }
hex = {version = "0.4.3"}
reqwest = { version = "0.12", features = ["json", "blocking"] }
thiserror = "2"
p384 = "0.13.1"
rsa = "0.9.8"
sha2 = "0.10.9"
x509-cert = { version = "0.2.5", features = ["signature"] }
der = { version = "0.7.10", features = ["pem"] }
signature = { version = "2.2.0", features = ["std"] }
clap = { version = "4.5.53", optional = true, features = ["derive"] }
log = "0.4.28"
url = "2.5.8"

[dependencies.getrandom]
version = "=0.2.16"
features = ["js"]

[target.'cfg(target_family = "wasm")'.dependencies]
wasm-bindgen = "0.2.105"
wasm-bindgen-futures = "0.4.55"
wasm-log = { version = "0.3.1", optional = true }

[features]
default = ["attestation", "serde"]
logger = ["dep:wasm-log"]
hyperv = ["dep:tss-esapi"]
serde = ["sev/serde"]
attestation = []
bin = ["dep:clap"]
