[package]
name = "tdx-attest"
version = "0.1.0"
edition = "2024"

[dependencies]
# dcap-qvl = "0.3"
# tdx-quote = "0.0.5"
wasm-bindgen.workspace = true
wasm-bindgen-futures.workspace = true
thiserror = "2"
zerocopy = { version = "0.8.39", features = ["derive"] }
p256 = "0.13.2"
x509-cert = { version = "0.3.0-rc.4", features = ["pem"] }
spki = "0.8.0-rc.4"
der = { version = "0.8.0-rc.10", features = ["derive", "oid"] }
# x509-verify = { version = "0.4.8", features = ["ed25519", "p256", "sha2", "x509"], default-features = false }
signature = "2.2.0"
sec1 = "0.7.3"
reqwest = { version = "0.13.2", features = ["json", "query"] }
chrono = { version = "0.4.44", features = ["serde"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = { version = "1.0.149", features = ["preserve_order"] }
anyhow = { version = "1.0" }
hex = { version = "0.4.3", features = ["serde"] }
urlencoding = "2.1.3"
const-oid = "0.10.2"
sha2 = "0.10.9"

[dev-dependencies]
tokio = { version = "1.49.0", features = ["full"] }
